@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11469 2012/08/24 15:20:31 wiz Exp $
+$NetBSD: TODO,v 1.11470 2012/08/24 15:24:58 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1137,6 +1137,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o star-1.5.1
 	o statist-1.3.0
 	o stella-3.7.2
+	o stellarium-0.11.4
 	o stgit-0.16
 	o stlport-4.6.2
 	o stow-2.2.0
@@ -1336,7 +1337,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xmule-1.12.2
 	o xnap-2.5r3
 	o xorp-1.8.5
-	o xosview-1.9.3
+	o xosview-1.9.4
 	o xpaint-2.9.9
 	o xpr-1.0.4 [unpackaged]
 	o xpuyopuyo-0.9.8
