@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.13 2012/08/24 13:49:05 ryoon Exp $
+$NetBSD: distinfo,v 1.14 2012/08/24 20:35:39 ryoon Exp $
 
 SHA1 (fotoxx-12.08.tar.gz) = 719e24de33cd2a1826302529987c1c97c19f5bb6
 RMD160 (fotoxx-12.08.tar.gz) = 6bd8b614dd6d9b5e1cae183fb8e3f9163a1a600f
 Size (fotoxx-12.08.tar.gz) = 1800791 bytes
 SHA1 (patch-aa) = 1640bf95c015519c215eeb2dafcf74cc1fb4f9a1
 SHA1 (patch-ab) = 69785c5fb66fc01df74bf7d6fe3b4487260b851f
-SHA1 (patch-ac) = 71398ac6f6614074b596df1b9f50a7ae41f8e7bc
+SHA1 (patch-ac) = d5443ab4e5931b4cc0e423a529280f2a1f1158fc
