@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2012/08/20 12:17:20 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2012/08/24 12:14:08 wiz Exp $
 #
 
 DISTNAME=	1.1.2
@@ -17,7 +17,7 @@ DIST_SUBDIR=	freeDiameter
 
 WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}
 USE_CMAKE=	yes
-CMAKE_ARGS+=    -DDISABLE_SCTP:BOOL=ON
+CMAKE_ARGS+=	-DDISABLE_SCTP:BOOL=ON
 USE_LANGUAGES=	c c++
 USE_TOOLS+=	bison flex pkg-config
 FLEX_REQD=	2.5.35
