@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: options.mk,v 1.1 2012/08/20 12:17:20 wiz Exp $
 
 PKG_OPTIONS_VAR=	PKG_OPTIONS.freeDiameter
 PKG_SUPPORTED_OPTIONS=	freediameter-all-extensions
@@ -10,14 +10,14 @@ PLIST_VARS+=	ext
 
 .if !empty(PKG_OPTIONS:Mall-extensions)
 # enable all except debugging and test
-#CMAKE_ARGS+=    -DALL_EXTENSIONS:BOOL=ON
-CMAKE_ARGS+=    -DBUILD_APP_ACCT:BOOL=ON
-CMAKE_ARGS+=    -DBUILD_APP_DIAMEAP:BOOL=ON
-CMAKE_ARGS+=    -DBUILD_APP_RADGW:BOOL=ON
-CMAKE_ARGS+=    -DBUILD_APP_REDIRECT:BOOL=ON
-CMAKE_ARGS+=    -DBUILD_APP_SIP:BOOL=ON
-CMAKE_ARGS+=    -DBUILD_DICT_LEGACY_XML:BOOL=ON
-CMAKE_ARGS+=    -DBUILD_RT_EREG:BOOL=ON
+#CMAKE_ARGS+=	-DALL_EXTENSIONS:BOOL=ON
+CMAKE_ARGS+=	-DBUILD_APP_ACCT:BOOL=ON
+CMAKE_ARGS+=	-DBUILD_APP_DIAMEAP:BOOL=ON
+CMAKE_ARGS+=	-DBUILD_APP_RADGW:BOOL=ON
+CMAKE_ARGS+=	-DBUILD_APP_REDIRECT:BOOL=ON
+CMAKE_ARGS+=	-DBUILD_APP_SIP:BOOL=ON
+CMAKE_ARGS+=	-DBUILD_DICT_LEGACY_XML:BOOL=ON
+CMAKE_ARGS+=	-DBUILD_RT_EREG:BOOL=ON
 # for debug-interactive-extension only
 #.include "../../devel/swig/buildlink3.mk"
 #.include "../../lang/python/extension.mk"
@@ -26,5 +26,5 @@ CMAKE_ARGS+=    -DBUILD_RT_EREG:BOOL=ON
 .include "../../textproc/libxml2/buildlink3.mk"
 PLIST.ext=	yes
 .else
-CMAKE_ARGS+=    -DALL_EXTENSIONS:BOOL=OFF
+CMAKE_ARGS+=	-DALL_EXTENSIONS:BOOL=OFF
 .endif
