@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.19 2012/08/15 21:20:14 jmmv Exp $
+# $NetBSD: Makefile,v 1.20 2012/08/23 02:26:56 jmmv Exp $
 
-DISTNAME=	sysbuild-2.2
+DISTNAME=	sysbuild-2.3
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -18,6 +18,7 @@ NO_CONFIGURE=		YES
 BUILD_SUBST=		-e 's,@SYSBUILD_BINDIR@,${PREFIX}/bin,g'
 BUILD_SUBST+=		-e 's,@SYSBUILD_EGDIR@,${EGDIR},g'
 BUILD_SUBST+=		-e 's,@SYSBUILD_ETCDIR@,${PKG_SYSCONFDIR},g'
+BUILD_SUBST+=		-e 's,@SYSBUILD_SHAREDIR@,${PREFIX}/share/sysbuild,g'
 
 PKG_SYSCONFSUBDIR=	sysbuild
 EGDIR=			${PREFIX}/share/examples/sysbuild
@@ -55,7 +56,8 @@ install-tests:
 .endfor
 
 do-test:
-	cd ${WRKSRC} && PATH="${WRKSRC}:${PATH}" kyua test
+	cd ${WRKSRC} && PATH="${WRKSRC}:${PATH}" \
+	    SYSBUILD_SHAREDIR="${WRKSRC}" kyua test
 .else
 PLIST_SUBST+=	TESTS=@comment
 .endif
@@ -69,8 +71,11 @@ do-build:
 .for file in sysbuild.1 sysbuild4cron.1 default.conf
 	sed ${BUILD_SUBST} <${FILESDIR}/${file} >${WRKSRC}/${file}
 .endfor
+	cp ${FILESDIR}/env.sh ${WRKSRC}
+	chmod +x ${WRKSRC}/env.sh
 
-INSTALLATION_DIRS+=	bin ${PKGMANDIR}/man1 share/examples/sysbuild
+INSTALLATION_DIRS+=	bin ${PKGMANDIR}/man1 \
+			share/examples/sysbuild share/sysbuild
 
 do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/sysbuild ${DESTDIR}${PREFIX}/bin/
@@ -82,6 +87,7 @@ do-install:
 .for file in default.conf
 	${INSTALL_DATA} ${WRKSRC}/${file} ${DESTDIR}${EGDIR}
 .endfor
+	${INSTALL_SCRIPT} ${WRKSRC}/env.sh ${DESTDIR}${PREFIX}/share/sysbuild
 
 .include "../../devel/shtk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
