@@ -47,6 +47,7 @@ SYSBUILD_CONFIG_VARS="BUILD_ROOT BUILD_TARGETS CVSROOT CVSTAG INCREMENTAL_BUILD
 #
 # Can be overriden for test purposes only.
 : ${SYSBUILD_ETCDIR="@SYSBUILD_ETCDIR@"}
+: ${SYSBUILD_SHAREDIR="@SYSBUILD_SHAREDIR@"}
 
 
 # Sets defaults for configuration variables that need a value.
@@ -209,6 +210,51 @@ sysbuild_config() {
 }
 
 
+# Outputs shell configuration commands.
+#
+# \params ... The options and arguments to the command.
+sysbuild_env() {
+    [ ${#} -lt 2 ] || shtk_cli_usage_error "env takes zero or one arguments"
+
+    local machine=
+    if [ ${#} -eq 1 ]; then
+        machine="${1}"
+    else
+        set -- $(shtk_config_get MACHINES)
+        [ ${#} -eq 1 ] || shtk_cli_usage_error "No machine name provided as" \
+            "an argument and MACHINES contains more than one name"
+        machine="${1}"
+    fi
+
+    local basedir="$(shtk_config_get BUILD_ROOT)/${machine}"
+    local srcdir="$(shtk_config_get SRCDIR)"
+
+    [ -f "${SYSBUILD_SHAREDIR}/env.sh" ] \
+        || shtk_cli_error "Cannot open ${SYSBUILD_SHAREDIR}/env.sh"
+
+    # The semicolon after the sourcing of env.sh is required to get this output
+    # working when passed through eval.  Running eval on the output collapses
+    # everything into a single line, and we need to separate the sourcing of
+    # env.sh from the definition of the global variables.
+    cat <<EOF
+. "${SYSBUILD_SHAREDIR}/env.sh" ;
+PATH="${basedir}/tools/bin:\${PATH}"
+D="${basedir}/destdir"
+O="${basedir}/obj${srcdir}"
+S="${srcdir}"
+T="${basedir}/tools"
+EOF
+
+    if shtk_config_has XSRCDIR; then
+        local xsrcdir="$(shtk_config_get XSRCDIR)"
+        cat <<EOF
+XO="${basedir}/obj${xsrcdir}"
+XS="${xsrcdir}"
+EOF
+    fi
+}
+
+
 # Fetches a copy of the source tree, or updates an existing one.
 #
 # \params ... The options and arguments to the command.
@@ -294,7 +340,7 @@ sysbuild_main() {
 
     local command="${1}"; shift
     case "${command}" in
-        build|config|fetch)
+        build|config|env|fetch)
             sysbuild_set_defaults
             sysbuild_config_load "${config_name}"
             "sysbuild_${command}" "${@}" || exit_code="${?}"
