@@ -32,6 +32,12 @@
 MOCK_CVSROOT=":local:$(pwd)/cvsroot"
 
 
+# Paths to installed files.
+#
+# Can be overriden for test purposes only.
+: ${SYSBUILD_SHAREDIR="@SYSBUILD_SHAREDIR@"}
+
+
 # Creates a fake program that records its invocations for later processing.
 #
 # The fake program, when invoked, will append its arguments to a commands.log
@@ -586,6 +592,129 @@ EOF
 }
 
 
+atf_test_case env__src_only
+env__src_only_body() {
+    cat >expout <<EOF
+. "${SYSBUILD_SHAREDIR}/env.sh" ;
+PATH="/my/root/shark/tools/bin:\${PATH}"
+D="/my/root/shark/destdir"
+O="/my/root/shark/obj/usr/src"
+S="/usr/src"
+T="/my/root/shark/tools"
+EOF
+    atf_check -s exit:0 -o file:expout sysbuild -c /dev/null \
+        -o BUILD_ROOT=/my/root -o MACHINES=shark -o SRCDIR=/usr/src env
+}
+
+
+atf_test_case env__src_and_xsrc
+env__src_and_xsrc_body() {
+    cat >expout <<EOF
+. "${SYSBUILD_SHAREDIR}/env.sh" ;
+PATH="/my/root/i386/tools/bin:\${PATH}"
+D="/my/root/i386/destdir"
+O="/my/root/i386/obj/a/b/src"
+S="/a/b/src"
+T="/my/root/i386/tools"
+XO="/my/root/i386/obj/d/xsrc"
+XS="/d/xsrc"
+EOF
+    atf_check -s exit:0 -o file:expout sysbuild -c /dev/null \
+        -o BUILD_ROOT=/my/root -o MACHINES=i386 -o SRCDIR=/a/b/src \
+        -o XSRCDIR=/d/xsrc env
+}
+
+
+atf_test_case env__explicit_machine
+env__explicit_machine_body() {
+    cat >expout <<EOF
+. "${SYSBUILD_SHAREDIR}/env.sh" ;
+PATH="/my/root/macppc/tools/bin:\${PATH}"
+D="/my/root/macppc/destdir"
+O="/my/root/macppc/obj/usr/src"
+S="/usr/src"
+T="/my/root/macppc/tools"
+EOF
+    atf_check -s exit:0 -o file:expout sysbuild -c /dev/null \
+        -o BUILD_ROOT=/my/root -o MACHINES="amd64 i386" -o SRCDIR=/usr/src \
+        env macppc
+}
+
+
+atf_test_case env__eval
+env__eval_body() {
+    make_one() {
+        mkdir -p "${1}"
+        touch "${1}/${2}"
+    }
+    make_one src src.cookie
+    make_one xsrc xsrc.cookie
+    make_one root/mach/destdir destdir.cookie
+    make_one root/mach/tools tools.cookie
+    make_one root/mach/"obj$(pwd)"/src src-obj.cookie
+    make_one root/mach/"obj$(pwd)"/xsrc xsrc-obj.cookie
+
+    find src xsrc root
+
+    mkdir -p root/mach/tools/bin
+    cat >root/mach/tools/bin/nbmake-mach <<EOF
+#! /bin/sh
+echo "This is nbmake!"
+EOF
+    chmod +x root/mach/tools/bin/nbmake-mach
+
+    atf_check -s exit:0 -o save:env.sh sysbuild -c /dev/null \
+        -o BUILD_ROOT="$(pwd)/root" \
+        -o MACHINES="mach" \
+        -o SRCDIR="$(pwd)/src" \
+        -o XSRCDIR="$(pwd)/xsrc" \
+        env
+
+    eval $(cat ./env.sh)
+
+    [ -f "${D}/destdir.cookie" ] || atf_fail "D points to the wrong place"
+    [ -f "${O}/src-obj.cookie" ] || atf_fail "O points to the wrong place"
+    [ -f "${S}/src.cookie" ] || atf_fail "S points to the wrong place"
+    [ -f "${T}/tools.cookie" ] || atf_fail "T points to the wrong place"
+    [ -f "${XO}/xsrc-obj.cookie" ] || atf_fail "XO points to the wrong place"
+    [ -f "${XS}/xsrc.cookie" ] || atf_fail "XS points to the wrong place"
+    atf_check -o inline:"This is nbmake!\n" nbmake-mach
+
+    mkdir -p src/bin/ls
+    atf_check_equal '$(pwd)/root/mach/obj$(pwd)/src/bin/ls' \
+        '$(cd src/bin/ls && curobj)'
+
+    mkdir -p xsrc/some/other/dir
+    atf_check_equal '$(pwd)/root/mach/obj$(pwd)/xsrc/some/other/dir' \
+        '$(cd xsrc/some/other/dir && curobj)'
+
+    mkdir a
+    atf_check_equal 'NOT-FOUND' '$(cd a && curobj)'
+    atf_check_equal 'NOT-FOUND' '$(cd /bin && curobj)'
+}
+
+
+atf_test_case env__too_many_machines
+env__too_many_machines_body() {
+    cat >experr <<EOF
+sysbuild: E: No machine name provided as an argument and MACHINES contains more than one name
+Type 'man sysbuild' for help
+EOF
+    atf_check -s exit:1 -e file:experr sysbuild -c /dev/null \
+        -o MACHINES="amd64 i386" env
+}
+
+
+atf_test_case env__too_many_args
+env__too_many_args_body() {
+    cat >experr <<EOF
+sysbuild: E: env takes zero or one arguments
+Type 'man sysbuild' for help
+EOF
+    atf_check -s exit:1 -e file:experr sysbuild -c /dev/null env foo bar
+}
+
+
 atf_test_case fetch__checkout__src_only
 fetch__checkout__src_only_body() {
     create_mock_cvsroot "${MOCK_CVSROOT}"
@@ -752,6 +881,13 @@ atf_init_test_cases() {
     atf_add_test_case config__name__not_found
     atf_add_test_case config__overrides
     atf_add_test_case config__too_many_args
+
+    atf_add_test_case env__src_only
+    atf_add_test_case env__src_and_xsrc
+    atf_add_test_case env__explicit_machine
+    atf_add_test_case env__eval
+    atf_add_test_case env__too_many_machines
+    atf_add_test_case env__too_many_args
 
     atf_add_test_case fetch__checkout__src_only
     atf_add_test_case fetch__checkout__src_and_xsrc
