@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.4 2009/04/06 10:34:55 wiz Exp $
+$NetBSD: distinfo,v 1.5 2012/07/22 11:02:40 cheusov Exp $
 
-SHA1 (dictem-1.0.3.tar.gz) = 3dbc181809dbc5de3916fd3f24eb82e857648127
-RMD160 (dictem-1.0.3.tar.gz) = 8f6d60965227ebd50e1e40bb1ad652c3952c6460
-Size (dictem-1.0.3.tar.gz) = 22042 bytes
+SHA1 (dictem-1.0.4.tar.gz) = 4ccba9d22969397e2902b5fe9e01fae6cfc03145
+RMD160 (dictem-1.0.4.tar.gz) = 7d16c8697a2d614649e24c9aa5867040f07df81c
+Size (dictem-1.0.4.tar.gz) = 22376 bytes
