@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2672 2012/08/25 11:02:11 christos Exp $
+$NetBSD: CHANGES-2012,v 1.2673 2012/08/25 12:35:06 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -4167,3 +4167,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated sysutils/sysupgrade to 1.2 [jmmv 2012-08-25]
 	Added net/iana-etc version 1.230 [christos 2012-08-25]
 	Updated print/acroread9 to 9.5.1nb1 [wiz 2012-08-25]
+	Updated sysutils/sysbuild to 2.3 [jmmv 2012-08-25]
